Update website for ACE 5.4

--- a/htm/biblio.htm
+++ b/htm/biblio.htm
@@ -13,10 +13,9 @@ Colin&nbsp;M. Campbell, George Havas, Alexander Hulpke, and Edmund&nbsp;F. Rober
 <br> <em>Communications in Algebra</em>, 30(9):4613--4619, 2002.
 
 <dt><a name="CLR90"><b>[CLR90]</b></a><dd>
-T.&nbsp;H. Cormen, C.&nbsp;E. Leiserson, and R.&nbsp;L. Rivest.
-<br> <em>Introduction to algorithms</em>.
-<br> The MIT Electrical Engineering and Computer Science Series. MIT
-  Press, Cambridge, MA, 1990.
+Thomas&nbsp;H. Cormen, Charles&nbsp;E. Leiserson, and Ronald&nbsp;L. Rivest.
+<br> <em>Introduction to Algorithms</em>.
+<br> The MIT Press, 1990.
 
 <dt><a name="CM72"><b>[CM72]</b></a><dd>
 H.S.M. Coxeter and W.O.J. Moser.
@@ -24,11 +23,11 @@ H.S.M. Coxeter and W.O.J. Moser.
 <br> Springer-Verlag, 3rd edition, 1972.
 
 <dt><a name="Hav91"><b>[Hav91]</b></a><dd>
-G.&nbsp;Havas.
+George Havas.
 <br> Coset enumeration strategies.
-<br> In <em>Proceedings of the International Symposium on Symbolic and
-  Algebraic Computation (ISSAC'91), Bonn 1991</em>, page 191textendash199. ACM
-  Press, 1991.
+<br> In Stephen&nbsp;M. Watt, editor, <em>ISSAC'91 (Proceedings of the 1991
+  International Symposium on Symbolic and Algebraic Computation)</em>, pages
+  191--199. ACM Press, 1991.
 
 <dt><a name="HR99ace"><b>[HR99ace]</b></a><dd>
 George Havas and Colin Ramsay.
@@ -58,10 +57,8 @@ John Leech.
 J.&nbsp;Neub"user.
 <br> An elementary introduction to coset table methods in computational
   group theory.
-<br> In C.&nbsp;M. Campbell and E.&nbsp;F. Robertson, editors, <em>
-  GroupstextendashSt Andrews 1981 (St Andrews, 1981)</em>, volume&nbsp;71 of <em>
-  London Math. Soc. Lecture Note Ser.</em>, page 1textendash45, Cambridge, 1982.
-  Cambridge Univ. Press.
+<br> In <em>Groups -- St. Andrews 1981</em>, London Mathematical Society
+  Lecture Note Series 71, pages 1--45. Cambridge University Press, 1982.
 
 <dt><a name="Ram99ace"><b>[Ram99ace]</b></a><dd>
 Colin Ramsay.
@@ -77,5 +74,5 @@ Charles&nbsp;C. Sims.
 </dl><p>
 [<a href="chapters.htm">Up</a>]<p>
 <P>
-<address>ACE manual<br>February 2020
+<address>ACE manual<br>March 2022
 </address></body></html>
